# ffmpeg-vulkan

./: .clang-format  CMakeLists.txt  Dockerfile  README.md  image.yuv  vcpkg.cmake  vcpkg.json
src/: SoftwareScale.h  main.cpp  vulkan_image_scaling.h
